Fixed submission pending title padding on mobile

--- a/pupil-spa/src/app/submission-pending/submission-pending.component.scss
+++ b/pupil-spa/src/app/submission-pending/submission-pending.component.scss
@@ -1,5 +1,5 @@
 .submission-description {
-  margin-top: 150px;
+  margin-top: 10vh;
   text-align: center;
 }
 
